# iceberg-quickstart-iac

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/: dependabot.yml
aws/: locals.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
dagster/: .env.dev  .env.example  .env.prod  .trivyignore  Dockerfile  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
dagster/lakehouse/: definitions.py
dagster/lakehouse/assets/: dimensions.py  event_streams.py  features.py  source_assets.py
dagster/lakehouse/quality/: runner.py
dagster/lakehouse/quality/soda_checks/: compliance_checks.yaml  event_stream_checks.yaml  feature_checks.yaml  scd_checks.yaml
dagster/lakehouse/resources/: iceberg.py
dagster/lakehouse/sensors/: schema_drift.py
dagster/lakehouse/tests/: test_alerting.py  test_audit.py  test_definitions.py  test_iceberg.py  test_source_assets.py  test_table_loader.py
dagster/lakehouse/utils/: alerting.py  audit.py  table_loader.py
docs/: architecture.md  bring-your-own-data.md  compliance.md  configuration-reference.md  deep-dive.md  deployment-guide.md  multi-environment.md  multi-tenancy.md  operations-runbook.md  secrets-management.md  table-template-reference.md
environments/: dev.tfvars  prod.tfvars
examples/: aws-glue-quickstart.tfvars  aws-nessie-production.tfvars  aws-nessie-quickstart.tfvars  gcp-quickstart.tfvars
gcp/: locals.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
table-templates/: README.md  _schema.json  (+3 more)
(+33 files in other folders)
